@@ -13,21 +13,19 @@ class dashboard implements renderable, templatable {
     private $capabilities;
     private $courseid;
     private $userid;
-    /**
-     * @var popup_request_questions
-     */
     private $request_questions_popup;
+    private $questions_for_me_to_create_popup;
 
-    public function __construct($userid, $courseid, $capabilities, $fragenersteller) {
+    public function __construct($userid, $courseid, $capabilities, $fragenersteller, $questions_to_create) {
         $this->courseid = $courseid;
         $this->capabilities = $capabilities;
         $this->userid = $userid;
         //$this->questions = $questions;
         // when using subtemplates: call them HERE and add the capabilities and other data that is needed in the parameters
         // ... see "class search_form implements renderable, templatable {"
-        //$this->fragenersteller = $fragenersteller; // not needed here, since it is given to popup_request_questions
+        //$this->fragenersteller = $fragenersteller; // not needed here, since it is given to popup_request_questions and only needed there
         $this->request_questions_popup = new popup_request_questions($fragenersteller);
-
+        $this->questions_for_me_to_create_popup = new popup_questions_for_me_to_create($questions_to_create);
     }
 
     /**
@@ -45,7 +43,7 @@ class dashboard implements renderable, templatable {
         $data->questions_released_count = block_exaquest_get_released_questionbankentries_count($this->courseid);
         $data->questions_released_and_to_review_count = block_exaquest_get_released_and_to_review_questionbankentries_count($this->courseid);
 
-
+        $data->questions_for_me_to_create_count = block_exaquest_get_questions_for_me_to_create_count($this->courseid, $this->userid);
         $data->questions_for_me_to_review_count = block_exaquest_get_questions_for_me_to_review_count($this->courseid, $this->userid);
         $data->questions_for_me_to_revise_count = block_exaquest_get_questions_for_me_to_revise_count($this->courseid, $this->userid);
         $data->questions_for_me_to_release_count = block_exaquest_get_questions_for_me_to_release_count($this->courseid, $this->userid);
@@ -73,6 +71,8 @@ class dashboard implements renderable, templatable {
         // REQUEST NEW QUESTIONS
         // this adds the subtemplate. The data, in this case fragenersteller, does not have to be given to THIS data, because it is in the data for request_questions_popup already
         $data->request_questions_popup = $this->request_questions_popup->export_for_template($output);
+
+        $data->questions_for_me_to_create_popup = $this->questions_for_me_to_create_popup->export_for_template($output);
 
         // similarity comparison button
         $data->buttons = [
