@@ -68,7 +68,14 @@ if ($capabilities["modulverantwortlicher"] || $capabilities["pruefungskoordinati
     }
 }
 
-$dashboard = new \block_exaquest\output\dashboard($USER->id, $courseid, $capabilities, $frageneersteller);
+$questions_to_create = [];
+if ($capabilities["fragenersteller"]) {
+    $questions_to_create = block_exaquest_get_questions_for_me_to_create($courseid, $USER->id);
+}
+
+
+
+$dashboard = new \block_exaquest\output\dashboard($USER->id, $courseid, $capabilities, $frageneersteller, $questions_to_create);
 echo $output->render($dashboard);
 
 // This is the code for rendering the create-questions-button with moodle-core functions. It is moved to the correct position with javascript.
